--- a/1-4.css
+++ b/1-4.css
@@ -23,13 +23,21 @@
   margin: 0 auto;
 }
 
+
+.sidebar-left{
+  width: 230px;
+  height: 1400px;
+  background-color: palegreen;
+}
+
 .blog {
   width: 500px;
   height: 1400px;
   background-color: limegreen;
 }
 
-.sidebar {
+
+.sidebar-right{
   width: 230px;
   height: 1400px;
   background-color: palegreen;
